# montage-ai

./: .dockerignore  .drone.yml  .env.example  .gitignore  .markdownlintignore  .pre-commit-config.yaml  404.html  AGENTS.md  CGPU_FIXES.md  CGPU_TEST_RESULTS.md  CHANGELOG.md  CINEMATIC_STABILIZED_EPIC_COMPLETION_REPORT.md  CLAUDE.md  CLI_REFERENCE.md  CLUSTER_OPTIMIZATION_PLAN.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_AUTOMATION_GUIDE.md  DEPLOYMENT_K3S_SUMMARY.md  DEPLOYMENT_NOTES_2026_02_10.md  DEPLOYMENT_READINESS_SUMMARY.md  Dockerfile  Dockerfile.qsv  EXPORT_CLI_QUICK_START.md  EXPORT_CLI_VERIFICATION.md  EXTREME_MODE_CHEATSHEET.txt  EXTREME_STABILIZATION_GUIDE.md  FIX_DEPLOYMENT_NOW.sh  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_EXTREME_STABILIZATION.md  INDEX.md  INSTALLATION_AND_DEPLOYMENT_ANALYSIS.md  INSTALLATION_VERIFICATION_REPORT.md  INTEGRATION_REPORT.md  Jenkinsfile  K3S_CLUSTER_TEST_RESULTS.md  K3S_DEPLOYMENT_CHECKLIST.md  K3S_DEPLOYMENT_SESSION_NOTES.md  KUBERNETES_RUNBOOK.md  LAYOUT_IMPROVEMENTS_SUMMARY.md  (+108 more)
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  agents.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci-quota-smoke.yml  dev-autoscale-smoke.yml  docker-publish.yml  hardcoded-registry-scan.yml  pages.yml  uv-ci.yml
.github/workflows.disabled/: README.md  ci-quota-smoke.yml
.venv-ci/: pyvenv.cfg
archive/: next_steps.2026-01-09-COMPLETED.md
benchmark_results/: README.md  baseline.json  micro_benchmark_baseline.json  monitoring_20260114_131835.json  monitoring_20260114_133320.json  phase3_benchmark.json  preview-perf-73165d7.json  profile_run.prof  profile_run_2.prof  profile_run_optimized_1.prof
benchmark_results/cache/: raw_F-CoZthcAJQ.mp4.scenes.msgpack  short_techno.wav.analysis.msgpack
blog/: 2025-01-introducing-montage-ai.md  descript-alternative.md
config/: montage.yaml
data/archive/: FD 19 Earth~medium.mp4.scenes.json  FD_19_Earthmedium.mp4.scenes.json  GSFC_20140421_EarthOrbit_m11525~preview.mp4.scenes.json  abstract_clouds.mp4.scenes.json  (+8 more)
deploy/: CLUSTER_WORKFLOW.md  CONFIGURATION.md  K3S_CLUSTER_INTEGRATION.md  README.md  cluster-example.yaml  config-global.yaml  config.env
diagrams/: infrastructure.mermaid  ux_flow.mermaid
docs/: 404.html  AI_DIRECTOR.md  AI_DIRECTOR_PARAMETER_TUNING.md  BACKEND_ARCHITECTURE_ANALYSIS.md  BACKEND_CONSOLIDATION_IMPLEMENTATION.md  BUSINESS_PLAN.md  CGPU_AUTHENTICATION.md  CGPU_AUTHENTICATION_INDEX.md  CGPU_AUTH_INVESTIGATION_SUMMARY.md  CGPU_INTEGRATION.md  CGPU_MODELS_RESEARCH.md  CGPU_SETUP_NEXT_STEPS.md  CGPU_WEBAPP_AUTH_IMPLEMENTATION.md  CLEANUP.md  CLI_REFERENCE.md  CLUSTER_OPTIMIZATION_PLAN.md  CODE_HEALTH.md  COMPETITIVE_ANALYSIS.md  CSS_UTILITIES_REFERENCE.md  DEAD_CODE_ANALYSIS.md  DEPENDENCY_AUDIT.md  DEPENDENCY_AUDIT_COMPLETION.md  DEPENDENCY_MANAGEMENT.md  DEPLOYMENT_FEEDBACK.md  DESIGN_SYSTEM.md  DOCUMENTATION_CLEANUP_FINAL.md  DOCUMENTATION_CONSOLIDATION.md  DX.md  Developer_Build_Quickstart.md  EDGE_CASES_HIGH_RES_SUPPORT.md  ENHANCEMENT_TRACKING_DESIGN.md  GITHUB_PAGES_UPDATE.md  GITHUB_SEO.md  HANDOVER_2025-12-30.md  INDEX.md  INFRA_TEAM_FEEDBACK_SOTA_2026.md  INSTALL.md  INSTALLATION_TEST.md  INTEGRATION_PLAN.md  JANUARY_2026_UPDATE.md  (+88 more)
examples/: README.md  basic_montage.py  footage_analysis.py  style_templates.py
gallery_montage_20260101_205430_v1_dynamic_PROJECT/: README.txt  gallery_montage_20260101_205430_v1_dynamic.csv  gallery_montage_20260101_205430_v1_dynamic.edl  gallery_montage_20260101_205430_v1_dynamic.otio  gallery_montage_20260101_205430_v1_dynamic_metadata.json
go/: Dockerfile  MIGRATION.md  PHASE2_CANARY.md  README.md  build-and-push.sh  go.mod  go.sum
issues/: config-template-automation.md  deployment-gap-analysis.md  deployment-review-2026-02-10.md  deployment_verification_report_2026_02_10_generated.md  documentation-and-api-improvements.md  installation-and-deploy-issues.md  verification_report_2026_02_10.md
output/: monitoring_20251201_202245.json  monitoring_20251201_204749.json
patch_files/: timeline_exporter.py
patches/: fix-registry-url.yaml
scripts/: archive-obsolete.sh  auto_fetch_output.sh  backup-montage-data.sh  benchmark_baseline.py  bootstrap.sh  build-and-deploy.sh  build-distributed.sh  build-multiarch.sh  build_local_cache.sh  build_multiarch.sh  check-hardcoded-registries.sh  check-no-github-actions.sh  check-registry.py  check-template-consistency.sh  check_public_docs.sh  ci-docker-startup.sh  ci-local.sh  ci.sh  cleanup.sh  common.sh  download_job.py  evaluate_story_engine.py  generate_movie.py  k8s_auto_downloader.py  kustomize-set-image.sh  load-image-to-cluster.sh  monitor_build_and_deploy.sh  monitor_system.py  poll_and_download.sh  publish-docs-gh.sh  publish-docs.sh  quick-setup-arm.sh  registry_check.sh  render-image.sh  resolve-image.sh  resolve-registry.sh  retrieve_cluster_results.sh  retrieve_results.py  run_distributed_job.sh  run_optimized_tests.py  (+15 more)
tests/: __init__.py  audit_cli_backend_frontend.py  conftest.py  test_analysis_cache.py  test_audio_analysis.py  test_audio_story_arc.py  test_auto_reframe.py  test_broll_integration.py  test_broll_planner.py  test_caption_styles.py  test_cgpu_jobs.py  test_clip_enhancement.py  test_config.py  test_creative_director_llm_integration.py  test_creative_director_no_llm.py  test_creative_evaluator.py  test_debug_env.py  test_dry_refactoring.py  test_editor_basic.py  test_encoder_router.py  test_engines_integration.py  test_exceptions.py  test_fast_imports.py  test_filler_removal.py  test_hardware_hwaccel_override.py  test_moe.py  test_montage_builder.py  test_otio_export.py  test_otio_verification.py  test_pacing_engine.py  test_preview_generator.py  test_preview_input_limits.py  test_preview_mode.py  test_pro_handoff.py  test_proxy_cache.py  test_render_safety.py  test_retrieval.py  test_retrieval.py.disabled  test_scene_analysis.py  test_scene_detection_highres.py  (+26 more)
website/: index.html  style.css
(+605 files in other folders)
