[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "montage-ai"
dynamic = ["version"]  # Version from git commit hash at runtime
description = "AI-powered automatic video montage creation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"

dependencies = [
    "moviepy>=2.1.1",  # 2.x API (.subclipped instead of .subclip)
    "opencv-python-headless>=4.10.0",
    "librosa>=0.10.0",
    "numpy>=1.26.0",
    "scenedetect[opencv]>=0.6.4",
    "tqdm>=4.66.0",
    "requests>=2.32.0",
    "jsonschema>=4.23.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"montage_ai" = ["styles/*.json"]

[tool.setuptools.dynamic]
version = {attr = "montage_ai._version.VERSION"}  # Fallback, actual version from GIT_COMMIT env
