[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "montage-ai"
dynamic = ["version"]  # Version from git commit hash at runtime
description = "AI-powered automatic video montage creation"
readme = "README.md"
license = {text = "PolyForm Noncommercial 1.0.0"}
requires-python = ">=3.10"

dependencies = [
    # Core video stack
    "moviepy>=2.2.1",
    "Pillow>=10.0.0,<12.0",
    "opencv-python-headless>=4.12.0.88",
    # librosa removed: FFmpeg-first audio analysis
    "numpy>=2.0.0,<3.0.0",
    "scenedetect[opencv]>=0.6.7.1",
    "tqdm>=4.67.1",
    "requests>=2.32.5",
    "jsonschema>=4.25.1",
    # Timeline / tooling
    "OpenTimelineIO>=0.18.1",
    # System
    "psutil>=7.1.3",
]

[project.optional-dependencies]
ai = [
    "mediapipe>=0.10.0",    # Smart Reframing: face detection
    "scipy>=1.10.0",        # Smart Reframing: path optimization
    "librosa>=0.10.0",      # Audio analysis fallback (FFmpeg primary)
    "color-matcher>=0.5.0", # Shot-to-shot color consistency
]
web = [
    "Flask>=3.0.0",
    "Werkzeug>=3.0.0",
    "redis>=5.0.0",         # Job queue backend
    "rq>=1.16.0",           # Background job processing
    "msgpack>=1.0.0",       # Job serialization
]
test = [
    "pytest>=8.0.0",
    "pytest-flask>=1.3.0",
]
cloud = [
    "cgpu>=0.4.0",          # Cloud GPU orchestration
    "soundfile>=0.12.0",    # Cloud job audio handling
]
all = [
    # All optional dependencies for: pip install montage-ai[all]
    "mediapipe>=0.10.0",
    "scipy>=1.10.0",
    "librosa>=0.10.0",
    "color-matcher>=0.5.0",
    "Flask>=3.0.0",
    "Werkzeug>=3.0.0",
    "redis>=5.0.0",
    "rq>=1.16.0",
    "msgpack>=1.0.0",
    "pytest>=8.0.0",
    "pytest-flask>=1.3.0",
    "cgpu>=0.4.0",
    "soundfile>=0.12.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"montage_ai" = [
    "styles/*.json",
    "web_ui/templates/*.html",
    "web_ui/static/**/*"
]

[tool.setuptools.dynamic]
version = {attr = "montage_ai._version.VERSION"}  # Fallback, actual version from GIT_COMMIT env
